# Yadaw

./: Cargo.toml
bins/yadaw/: Cargo.toml
bins/yadaw/src/: audio_file.rs  main.rs  settings.rs
bins/yadaw/src/audio_thread/: audio_buffer.rs  driver.rs  mod.rs  one_shot_player.rs
bins/yadaw/src/ui/: mod.rs
bins/yadaw/src/ui/components/: filled_button.rs  mod.rs  text_input.rs
bins/yadaw/src/ui/magic_menu/: mod.rs
libs/adevice/: Cargo.toml  build.rs
libs/adevice/examples/: enumerate.rs
libs/adevice/src/: config.rs  device.rs  host.rs  lib.rs  stream.rs
libs/adevice/src/backends/: mod.rs
libs/adevice/src/backends/coreaudio/: device.rs
libs/adevice/src/backends/wasapi/: com.rs  device.rs  host_config.rs  mod.rs  stream.rs  utility.rs
libs/advice/: Cargo.toml
libs/advice/examples/: enumerate.rs
libs/advice/src/: config.rs  error.rs  lib.rs
libs/advice/src/backends/coreaudio/: audio_unit.rs  device.rs  host.rs  mod.rs  stream.rs  utility.rs
libs/advice/src/backends/wasapi/: host.rs  host_config.rs  stream.rs  utility.rs
libs/kui/: Cargo.toml
libs/kui-macros/: Cargo.toml
libs/kui-macros/src/: elem.rs  len.rs  lib.rs  utility.rs
libs/kui-macros/src/elem/: color.rs  decl.rs  mod.rs  prop.rs
libs/kui/src/: ctx.rs  element.rs  event_loop.rs  lib.rs  window.rs
libs/kui/src/elements/: anchor.rs  appearance.rs  button.rs  div.rs  flex.rs  hooks.rs  interactive.rs  mod.rs  text.rs  text_input.rs  types.rs
libs/kui/src/event/: keyboard.rs  mod.rs  pointer.rs
libs/kui/src/private/: ctx.rs  gfx.rs  mod.rs  window.rs
libs/yadaw-ui/: Cargo.toml
libs/yadaw-ui/src/: app.rs  lib.rs  runtime.rs  ui_resources.rs  window.rs
libs/yadaw-ui/src/elem/: canvas.rs  elements.rs  empty.rs  events.rs  lazy_linear_layout.rs  length.rs  linear_layout.rs  mod.rs  shapes.rs  text.rs  transform.rs  with_cursor.rs  with_data.rs  with_default_size.rs  with_margin.rs  with_scroll.rs  with_size.rs
libs/yadaw-ui/src/elem/utils/: mod.rs
libs/yadaw-ui/src/element/: elem_ctx.rs  event.rs  metrics.rs  mod.rs  set_size.rs  size_hint.rs
libs/yadaw-ui/src/event/: keyboard.rs  mod.rs  mouse.rs
libs/yadaw-ui/src/private/: app_state.rs  mod.rs  renderer.rs  window_state.rs
libs/yadaw-ui/src/scheme/: mod.rs
src/: main.rs
src/ui/: mod.rs
src/ui/sequencer/: clip.rs  mod.rs  state.rs  track_header.rs
