[package]
name = "yadaw"
edition = "2024"
publish = false

[dependencies]
kui.workspace = true
advice.workspace = true

bitflags.workspace = true
parking_lot.workspace = true

[dependencies.symphonia]
git = "https://github.com/pdeljanov/Symphonia.git"
branch = "dev-0.6"
default-features = false
features = ["ogg", "mp3", "wav", "flac", "id3v2", "vorbis", "pcm"]
