[package]
name = "yadaw"
edition = "2024"
publish = false

[dependencies]
kui.workspace = true
advice.workspace = true

bitflags.workspace = true
parking_lot.workspace = true

serde = { version = "1", features = ["derive"] }
serde-inline-default = "0.2"
toml = { version = "0.8", default-features = false, features = ["parse"] }

thiserror = "2"
log = "0.4"

[dependencies.symphonia]
git = "https://github.com/pdeljanov/Symphonia.git"
branch = "dev-0.6"
default-features = false
features = ["ogg", "mp3", "wav", "flac", "id3v2", "vorbis", "pcm"]
