[package]
name = "adevice"
edition = "2024"
publish = false

[features]
default = ["wasapi"]

wasapi = ["dep:windows"]

[dependencies]
bitflags.workspace = true

[dependencies.windows]
version = "0.59"
optional = true
features = [
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_Multimedia",
    "Win32_Media_KernelStreaming",
    "Win32_System_Threading",
    "Win32_Security",
]
