[package]
name = "advice"
edition = "2024"
publish = false

[features]
default = ["wasapi", "coreaudio"]

wasapi = ["dep:windows"]
coreaudio = ["dep:coreaudio-sys"]

[dependencies]
bitflags.workspace = true

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.59"
optional = true
features = [
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_Multimedia",
    "Win32_Media_KernelStreaming",
    "Win32_System_Threading",
    "Win32_Security",
]

[target.'cfg(target_os = "macos")'.dependencies.coreaudio-sys]
version = "0.2"
optional = true
default-features = false
features = ["audio_unit", "audio_toolbox"]
