[package]
name = "kui"
edition = "2024"
publish = false

[dependencies]
kui-macros = { path = "../kui-macros" }

winit = "0.30"
rustc-hash = "2"
slotmap = "1"
smallvec = "1"
vello = "0.4"
pollster = "0.4"
parley = { git = "https://github.com/linebender/parley.git" } # parley on crates.io stills depends on peniko 0.2
