[package]
name = "kui"
edition = "2024"
publish = false

[dependencies]
kui-macros = { path = "../kui-macros" }

winit = { git = "https://github.com/rust-windowing/winit.git" }
rustc-hash = "2"
slotmap = "1"
smallvec = "1"
vello = { git = "https://github.com/linebender/vello.git" }
pollster = "0.4"
parley = { git = "https://github.com/linebender/parley.git" }

bitflags.workspace = true
